Release Notes for the Event Bus

Version 1.4
Issue 27 : ContainerEventServiceRegistrar call updateContainerEventService too often

Version 1.3
Issue 23: Added Prioritiezed Subscribers
Release now available in Maven

Version 1.2
Issue 7: Added further configuration of EventServiceLocator and EventBus services through setEventService(String, EventService)
Issue 11: Added Subscription Annotations @EventSubscriber & @EventTopicSubscriber
Issue 15: Not all annotation-based subscriptions notified
Issue 18: EventSubscriber annotation broken for weak strength
Issue 19: Apache log4j logging option (very flexible logging with log4j, java.util.logging, and commons logging)
Issue 20: Remove calls to System.out.println in ThreadSafeEventService

Version 1.1
Issue 13: EventServiceAction Javadoc error

Version 1.0
Issue 12: Remove dependency on EventServiceEvent, allow publish for any class/object
Issue 10: Event Caching added

0.9.6
ISSUE 9: VetoTopicEventListener added

0.9.5
ISSUE 5: RegEx subscriptions
ISSUE 6: Subscribe class subscribes to subclass events too, can now subscribeExactly as well.
Cleaned Javadoc more, especially fixing hte overly aggressive replacement of "handle" with "subscribe".

0.9.1
ISSUE 4: Made WeakReferences the default.  Changed subscriber to subscribeStrongly and subscribeWeakly to subscribe
Changed API by renaming all *Handlers to *Subscriber, changed handleEvent to onEvent
Cleaned Javadoc so that there are practically no errors.

0.8.3
ISSUE 3: Guarenteed Ordering in order of subscribers, and exposure of subscribers

0.8.2
ISSUE 1: Problem with one object implementing both subscriber interfaces
ISSUE 8: SwingEventService logs on dialogs

0.8.1
Initial release