@@ -16,14 +16,17 @@
 package org.bushe.swing.event;
 
 /**
- * Convenience base class for EventServiceEvents in the application. Provides the small convenience of holding the event
- * source publication.  It is not necessary to use this event class when using an EventService.
+ * Convenience base class for EventServiceEvents in the application. Provides the convenience of
+ * holding the event source publication and event status.  It is not necessary to use this event class when 
+ * using an EventService.
  *
  * @author Michael Bushe michael@bushe.com
  */
-public abstract class AbstractEventServiceEvent implements EventServiceEvent {
+public abstract class AbstractEventServiceEvent implements EventServiceEvent, PublicationStatusTracker {
 
    private Object source = null;
+   protected final Object stateLock = new Object();
+   private PublicationStatus publicationStatus = PublicationStatus.Unpublished;
 
    /**
     * Default contructor
@@ -37,5 +40,17 @@ public abstract class AbstractEventServiceEvent implements EventServiceEvent {
    /** @return the source of this event */
    public Object getSource() {
       return source;
+   }
+
+   public PublicationStatus getPublicationStatus() {
+      synchronized (stateLock) {
+         return publicationStatus;
+      }
+   }
+
+   public void setPublicationStatus(PublicationStatus status) {
+      synchronized (stateLock) {
+         publicationStatus = status;
+      }
    }
 }
